--- a/microservices/assets/deployment.yml
+++ b/microservices/assets/deployment.yml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: train-app
-        image: *********
+        image: train_image
         imagePullPolicy: Never
         ports:
         - containerPort: 80
