--- a/docker-ms/assets/infra/deployment.yaml
+++ b/docker-ms/assets/infra/deployment.yaml
@@ -24,6 +24,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
+    name: server-hello-svc
     labels:
       app: server-hello
     annotations:
